[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loguih"
version = "0.1.0"
authors = [
    { name="Amy Parker", email="amy@amyip.net" },
]
description = "InterceptHandler injector for Loguru"
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/amyipdev/loguru-intercepthandler"
Issues = "https://github.com/amyipdev/loguru-intercepthandler/issues"
